fixed gap in nsfw container

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@
     background-color: #16161e; 
     border: 1px solid rgba(255, 255, 255, 0.1); 
     
-    gap: 10px;
     padding: 0 15px;
     border-radius: 12px;
     height: 42px;
